# LibreViewApp

./: .env.example  .gitignore  LICENSE  LibreView.yaml  README.md  client.py  client_new.py  logger_config.py  main.py  main_new.py  pyproject.toml  requirements.txt  setup.py
config/: LibreLinkUp.yaml  LibreView.yaml
libreapp/: __init__.py
libreapp/clients/: libre_linkup.py  libre_view.py
libreapp/examples/: libre_app.py  libre_chat.py  libre_linkup_example.py  libre_view_example.py
libreapp/utils/: data_masking.py  logger.py  logger_config.py
